[fix] Collector 불러오던것을 toList()로 변경